auto-test/tests/chapter_18/invalid_parse/struct_member_name_kw.c


struct s {
    int return;
}

int main(void) {
    return 0;
}